# xyz-dl

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  xyz-dl.py
src/xyz_dl/: __init__.py  __main__.py  async_adapter.py  cli.py  config.py  downloader.py  exceptions.py  filename_sanitizer.py  models.py  parsers.py  retry.py  security.py
src/xyz_dl/cache/: __init__.py  cache_manager.py
src/xyz_dl/core/: __init__.py  downloader_core.py  file_manager.py  network_client.py  progress_manager.py  validator.py
src/xyz_dl/performance/: __init__.py  config_cache.py  connection_pool_optimizer.py  streaming_downloader.py
src/xyz_dl/utils/: __init__.py  filename_utils.py
tests/: conftest.py  test_async_architecture.py  test_cache_manager.py  test_config_cache.py  test_connection_pool_optimizer.py  test_downloader.py  test_end_to_end_simple.py  test_exceptions.py  test_filename_security.py  test_http_security.py  test_models.py  test_parsers.py  test_path_security.py  test_performance_benchmark.py  test_refactored_modules.py  test_retry_mechanism.py  test_secure_filename_sanitizer.py  test_security_html_injection.py  test_show_notes.py  test_simple_coverage.py  test_streaming_downloader.py
tests/fixtures/: episode_655b4216c9e7.html  episode_669f1f9f8fca.html  episode_68916f6b8e06.html
tests/utils/: __init__.py  mock_http.py  test_data_manager.py
