[project]
name = "xyz-dl"
version = "2.0.0"
description = "小宇宙播客音频下载器 - 现代化异步版本"
authors = [
    {name = "slarkio", email = "slarkio@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["podcast", "downloader", "xiaoyuzhou", "audio", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "aiohttp>=3.8.0",
    "aiofiles>=0.8.0",
    "beautifulsoup4>=4.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=12.0.0",
    "bleach>=6.0.0,<7.0.0"
]


[project.scripts]
xyz-dl = "xyz_dl.cli:main"

[project.urls]
Homepage = "https://github.com/slarkio/xyz-dl"
Repository = "https://github.com/slarkio/xyz-dl.git"
Issues = "https://github.com/slarkio/xyz-dl/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xyz_dl"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    # Testing frameworks
    "aioresponses>=0.7.8",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    # Code formatting and linting
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    # Type hints
    "types-aiofiles>=0.8.0",
    "types-bleach>=6.2.0.20241123",
]
